--- a/src/main/java/Anggota/AnggotaDashboard.form
+++ b/src/main/java/Anggota/AnggotaDashboard.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Dashboard Angota"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -60,7 +61,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="LabelTugas" min="-2" pref="245" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="384" max="-2" attributes="0"/>
-                          <Component id="namaAngota" min="-2" pref="116" max="-2" attributes="0"/>
+                          <Component id="namaAnggota" min="-2" pref="116" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jSeparator2" alignment="0" max="32767" attributes="0"/>
                       <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
@@ -76,7 +77,7 @@
                   <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="LabelTugas" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="namaAngota" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="namaAnggota" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jSeparator2" min="-2" pref="10" max="-2" attributes="0"/>
@@ -231,7 +232,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="namaAngota">
+        <Component class="javax.swing.JLabel" name="namaAnggota">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Poppins" size="14" style="0"/>
@@ -250,7 +251,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="com.mycompany.tindaklanjutku.custom.CustomTable" name="tugas">
+            <Component class="com.mycompany.tindaklanjutku.custom.CustomTable" name="tableTugas">
             </Component>
           </SubComponents>
         </Container>
